# agent-git

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  basic.ipynb
projects/: README.md
projects/short-term-rental/: 2025-02-09T17:09:43Z.txt  examples.json
sonic/: __init__.py  pyproject.toml
sonic/adl/: agent.py  helper.py  types.py
sonic/tests/: main.py
sonic/tests/adl/: test_agent_from_adl.py  test_basic.py  test_helper.py
sonic/utils/: config.py
sonic/utils/genai/: README.md
sonic/utils/genai/agents/: __init__.py  base.py  text_classification.py
sonic/utils/genai/llm/: __init__.py  example.md  llm.py  utils.py
sonic/utils/genai/prompts/: __init__.py  prompts.py
sonic/utils/git/: helper.py
sonic/utils/logger/: __init__.py
